001/deployment/kubernetes/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: deepstudy-ai
  namespace: production
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: deepstudy-ai
